--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ TextBasedRPG/Models/stable-diffusion-xl-refiner-1.0/
 TextBasedRPG/Models/controlnet-canny-sdxl-1.0/
 HFModels/IllusionDiffusion/
 TextBasedRPG/Models/controlnet-qr-pattern-sdxl/
+3Magi/src/baudline-bin/
