--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ TextBasedRPG/Models/controlnet-canny-sdxl-1.0/
 HFModels/IllusionDiffusion/
 TextBasedRPG/Models/controlnet-qr-pattern-sdxl/
 3Magi/src/baudline-bin/
+Models/whisper-large-v2/
